--- a/American Toad/.project
+++ b/American Toad/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>American Toad</name>
+	<name>American Toad xwang7</name>
 	<comment></comment>
 	<projects>
 	</projects>
